[project]
name = "piazza-mcp-poke"
version = "0.1.0"
description = "Piazza MCP server for Poke — ask your AI assistant about course forums"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "piazza", "poke", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp",
    "piazza-api",
    "html2text",
    "uvicorn",
]

[project.urls]
Repository = "https://github.com/JaidenRatti/piazza-mcp-poke"
Upstream = "https://github.com/smchase/piazza-mcp"

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
piazza-mcp-poke = "piazza_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piazza_mcp"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
